tests/snapshots/execution_spec__test-modify.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

input Foo {
  bar: String
}

scalar JSON

scalar PhoneNumber

type Query {
  data(input: Foo): String
}

scalar Url

schema {
  query: Query
}
