tests/snapshots/execution_spec__test-modify.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

input Foo {
  bar: String
}

type Query {
  foo(input: Foo): String @http(path: "/foo") @modify(name: "data")
}
