tests/snapshots/execution_spec__test-multi-interface.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type B implements IA & IB {
  a: String
  b: String
}

scalar Date

scalar Email

interface IA {
  a: String
}

interface IB {
  b: String
}

scalar JSON

scalar PhoneNumber

type Query {
  bar: B
}

scalar Url

schema {
  query: Query
}
