tests/snapshots/execution_spec__test-multiple-resolvable-directives-on-field.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Multiple resolvers detected [@http, @call]",
    "trace": [
      "Query",
      "user2"
    ],
    "description": null
  },
  {
    "message": "Multiple resolvers detected [@http, @const]",
    "trace": [
      "Query",
      "user1"
    ],
    "description": null
  }
]
