tests/snapshots/execution_spec__test-nested-link.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @link(src: "graphql-with-link.graphql", type: Config) {
  query: Query
}
