tests/snapshots/execution_spec__test-nested-value.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  id: Int
  user: User!
}

type Query {
  posts: [Post]
}

scalar Url

type User {
  id: Int!
  name: String
}

schema {
  query: Query
}
