tests/snapshots/execution_spec__test-nested-value.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

type Post {
  id: Int
  user: User! @http(path: "/users", query: [{key: "id", value: "{{.value.user.id}}"}])
}

type Query {
  posts: [Post] @http(path: "/posts")
}

type User {
  id: Int!
  name: String
}
