tests/snapshots/execution_spec__test-no-base-url.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No base URL defined",
    "trace": [],
    "description": null
  }
]
