tests/snapshots/execution_spec__test-null-expr.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  hello: Int
}

scalar Url

schema {
  query: Query
}
